# granola-local-archive

./: .gitignore  README.md  pyproject.toml
.github/agents/: mcp-review.agent.md  release-readiness.agent.md  security-review.agent.md
.github/workflows/: ci.yml
ops/: check-public-hygiene.sh  generate-cursor-install-link.py  manage-launchd.sh  run-archive.sh  run-mcp.sh
ops/launchd/: granola-local-archive-daily.plist  granola-local-archive-hourly.plist
src/granola_local_archive/: __init__.py  cli.py  config.py  index.py  manual_transcripts.py  mcp_server.py  models.py  normalize.py  storage.py  syncer.py  utils.py
src/granola_local_archive.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_manual_import.py  test_mcp_server.py  test_query.py  test_sync.py
