[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "granola-local-archive"
version = "0.1.0"
description = "Unofficial MCP server and local index for chatting with Granola notes, summaries, and transcripts"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Utilities",
]

[project.scripts]
granola-local-archive = "granola_local_archive.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
